# DailyFlash

./: .gitignore  Config.toml.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard_monitor.rs  config.rs  error.rs  lib.rs  main.rs  scheduler.rs  server.rs  store.rs
src-tauri/src/connectors/: github.rs  mod.rs  rss.rs
src/components/: Dashboard.tsx  ItemCard.tsx  NoteInput.tsx  SourceFilter.tsx
src/hooks/: useDashboard.ts
